# xiaozhi-linux

./: CMakeLists.txt  Makefile  README.md
demo/: CMakeLists.txt  linx.cc
docs/: api-reference.md  quickstart.md
docs/modules/: audio.md  filestream.md  http.md  log.md  opus.md  websocket.md
linxsdk/: CMakeLists.txt
linxsdk/alsaaudio/include/: AlsaAudio.h
linxsdk/audio/include/: AudioInterface.h  PortAudioImpl.h
linxsdk/audio/src/: AudioFactory.cc  PortAudioImpl.cc
linxsdk/filestream/include/: FileStream.h
linxsdk/filestream/src/: FileStream.cc
linxsdk/http/include/: HttpClient.h  HttpClientHelper.h
linxsdk/http/src/: HttpClient.cc
linxsdk/json/include/: Json.h
linxsdk/log/include/: Log.h
linxsdk/opus/include/: Opus.h
linxsdk/websocket/include/: Websocket.h
linxsdk/websocket/src/: Websocket.cc
